ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser509667/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RegressionTests/parser509667/input.ts:4:4
  |
4 |    }
  |    ^

